# Fall

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
Editor/: CMakeLists.txt
Editor/src/: Editor.cpp
Fall/: CMakeLists.txt  Config.cmake
Fall/src/: Fall.h  FallPCH.cpp  FallPCH.h
Fall/src/Core/: Application.cpp  Application.h  Base.h  Core.cmake  EntryPoint.h  FileSystem.cpp  FileSystem.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  MouseCodes.h  PlatformDetection.h  TimeStep.h  Timer.h  Window.cpp  Window.h
Fall/src/DebugTools/: DebugTools.cmake  Instrumentor.h  Log.cpp  Log.h
Fall/src/Events/: ApplicationEvent.h  Event.h  EventBus.h  KeyEvent.h  MouseEvent.h
Fall/src/ImGui/: ImGui.cmake  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Fall/src/Material/: MaterialCommon.h  MaterialRegistry.h
Fall/src/Memory/: Buffer.h  BufferView.h  MappedFile.cpp  MappedFile.h  Memory.cmake
Fall/src/Renderer/: README.md  Renderer.cmake
Fall/src/Renderer/Camera/: OrthographicCamera.cpp  OrthographicCamera.h
Fall/src/Renderer/Core/: Camera.h  FrameContext.cpp  FrameContext.h  Renderer.cpp  Renderer.h
Fall/src/Renderer/GPU/: GPUBuffer.cpp  GPUBuffer.h  GPUCommand.cpp  GPUCommand.h  GPUComputePass.cpp  GPUComputePass.h  GPUComputePipeline.cpp  GPUComputePipeline.h  GPUContext.cpp  GPUContext.h  GPUDeletionQueue.h  GPUGraphicsPipeline.cpp  GPUGraphicsPipeline.h  GPURenderPass.cpp  GPURenderPass.h  GPURenderTarget.cpp  GPURenderTarget.h  GPURingBuffer.cpp  GPURingBuffer.h  GPUShader.cpp  GPUShader.h  GPUTexture.cpp  GPUTexture.h  GPUUtils.cpp  GPUUtils.h
Fall/src/Renderer/Pass/: ComputePass.h  Pass.h  RenderPass.h
Fall/src/Renderer/Pass/Implementations/: ClearPass.cpp  ClearPass.h  ForwardRenderPass.cpp  ForwardRenderPass.h  ImGuiPass.cpp  ImGuiPass.h  RenderItem.h
Fall/src/Renderer/Resource/Buffer/: BufferDesc.h
Fall/src/Renderer/Resource/Pipeline/: PipelineKey.h  PipelineKeyHash.h  PipelineManager.cpp  PipelineManager.h
Fall/src/Renderer/Resource/Shader/: ComputeShader.h  GraphicsShader.h  ShaderReflection.h
Fall/src/Renderer/Resource/Texture/: TextureDesc.h
Fall/src/Sdl/: Sdl.cmake  SdlInput.cpp  SdlUtils.cpp  SdlWindow.cpp  SdlWindow.h
Fall/src/Utils/: PlatformUtils.h  Thread.cpp  Utils.cmake
FallEngine/: CMakeLists.txt
FallEngine/assets/: compile.bat
FallEngine/src/: FallEngine.h  FallEnginePCH.h
FallEngine/src/FallEngine/: Application.cpp  Application.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
FallEngine/src/FallEngine/Assets/Shaders/: compile.bat
FallEngine/src/FallEngine/Core/: Application.cpp  Application.h  Assert.h  Base.h  Buffer.h  EntryPoint.h  FileSystem.cpp  FileSystem.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  TimeStep.h  Window.h
FallEngine/src/FallEngine/DebugTools/: Assert.h  Instrumentor.h  Log.cpp  Log.h
FallEngine/src/FallEngine/Events/: ApplicationEvent.h  Event.h  EventBus.h  KeyEvent.h  MouseEvent.h
FallEngine/src/FallEngine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
FallEngine/src/FallEngine/Memory/: Buffer.h  BufferView.h  MappedFile.cpp  MappedFile.h
FallEngine/src/FallEngine/Renderer/: Buffer.cpp  Buffer.h  ComputeShader.cpp  ComputeShader.h  GraphicContext.cpp  GraphicsContext.cpp  GraphicsContext.h  GraphicsShader.cpp  GraphicsShader.h  Pipeline.cpp  Pipeline.h  README.md  RenderPass.cpp  RenderPass.h  RenderTarget.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
FallEngine/src/FallEngine/Renderer/Buffers/: Buffer.h  FrameBuffer.h  UniformBuffer.h
FallEngine/src/FallEngine/Renderer/Core/: FrameContext.cpp  FrameContext.h  Renderer.cpp  Renderer.h
FallEngine/src/FallEngine/Renderer/GPU/: GPUBuffer.cpp  GPUBuffer.h  GPUCommand.cpp  GPUCommand.h  GPUComputePass.cpp  GPUComputePass.h  GPUContext.cpp  GPUContext.h  GPUPipeline.cpp  GPUPipeline.h  GPURegistry.h  GPURenderPass.cpp  GPURenderPass.h  GPURenderTarget.cpp  GPURenderTarget.h  GPUShader.cpp  GPUShader.h  GPUTexture.cpp  GPUTexture.h  GPUUtils.cpp  GPUUtils.h
FallEngine/src/FallEngine/Renderer/Pass/: ClearPass.cpp  ClearPass.h  ComputePass.h  RenderPass.h
FallEngine/src/FallEngine/Renderer/Pass/Implementations/: ClearPass.cpp  ClearPass.h  ForwardRenderPass.cpp  ForwardRenderPass.h
FallEngine/src/FallEngine/Renderer/Pipeline/: Pipeline.cpp  Pipeline.h  PipelineHandle.h  PipelineJob.h  PipelineKey.h  PipelineKeyHash.h
FallEngine/src/FallEngine/Renderer/Resource/: Buffer.h  BufferDesc.h  Texture.h  TextureDesc.h
FallEngine/src/FallEngine/Renderer/Resources/: Shader.cpp  Shader.h
FallEngine/src/FallEngine/Renderer/Shader/: ComputeShader.h  GraphicsShader.h  ShaderReflection.h
FallEngine/src/FallEngine/Renderer/Shaders/: ComputeShader.cpp  ComputeShader.h  GraphicsShader.cpp  GraphicsShader.h  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h
FallEngine/src/FallEngine/Sdl/: SdlInput.cpp  SdlUtils.cpp  SdlWindow.cpp  SdlWindow.h
FallEngine/src/FallEngine/Utils/: PlatformUtils.h  Thread.cpp
FallEngine/src/Platform/DirectX/: DirectXContext.cpp  DirectXContext.h
FallEngine/src/Platform/Sdl/: SdlInput.cpp  SdlUtils.cpp  SdlWindow.cpp  SdlWindow.h
FallEngine/src/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h
FallEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Math/: CMakeLists.txt
Math/src/: Vector2.h  Vector3.h  Vector4.h
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp
Sandbox/src/Layers/: Layers.cmake
